# rust-ms-template

./: Cargo.toml  dev-config.yaml
src/: main.rs
src/config/: config.rs
